--- a/catalog.html
+++ b/catalog.html
@@ -19,12 +19,15 @@
                     <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
                 </a>
                 <div class="user-wrapper">
-            <form method="get" action="https://echo.htmlacademy.ru">
-                <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-                <input type="search" id="search-field" name="search-field" placeholder="Поиск:">
-            </form>
-            <a class="link flag-link" href="#">Закладки:0</a>
-            <a class="link cart-link cart-success" href="#">Корзина:10</a>
+                    <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+                        <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+                  <input class="search" type="search" id="search-field" name="search-field" placeholder="Поиск:">
+                  <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+                    <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+                  </svg>
+                </form>
+            <a class="link flag-link" href="#">Закладки: 0</a>
+            <a class="link cart-link cart-success" href="#">Корзина: 10</a>
             <a class="link order-link" href="#">Оформить заказ</a>
         </div>
         </div>
@@ -33,17 +36,22 @@
         <div class="header-info">
             <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
             <div class="header-contacts">
-                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+                <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
                 <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
-            <div class="user-navigation">
+            <div class="user-navigation user-catalog-navigation">
                 <div class="account-name">
                     <a class="account-link-name" href="#">Равшан Джамшутович</a>
-                    <a href="index.html" aria-label="Выйти из аккаунта"></a>
+                    <a class="profile-link" href="#" aria-label="Профайл пользователя">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18"><path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/></svg>
+                    </a>
+                    <a class="logout-link" href="index.html" aria-label="Выйти из аккаунта">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17"><g fill="#c5c5c5"><path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg>
+                    </a>
                 </div>
                 <div class="account-data">
-                    <a class="account-link" href="#">Мои заказы</a>
-                    <a class="account-link" href="#">Личный кабинет</a>
+                    <a class="account-link link-my-order" href="#">Мои заказы</a>
+                    <a class="account-link link-personal-account" href="#">Личный кабинет</a>
                 </div>
                 </div>
             </div>
@@ -64,14 +72,14 @@
         <h1 class="visually-hidden">Каталог</h1>
         <div class="container">
         <ul class="breadcrumbs-list">
-            <li>
+            <li class="breadcrumbs-item">
                 <a href="index.html">
-                    <img src="img/icons/icon-home.svg" width="20" height="20" alt="Переход на главную страницу">
+                    <img src="img/icons/icon-home.svg" width="15" height="15" alt="Переход на главную страницу">
                 </a>
             </li>
-            <li><a href="#">каталог</a></li>
-            <li><a href="#">инструмент</a></li>
-            <li><a href="#">перфораторы</a></li>
+            <li class="breadcrumbs-item"><a href="#">каталог</a></li>
+            <li class="breadcrumbs-item"><a href="#">инструмент</a></li>
+            <li class="breadcrumbs-item breadcrumbs-current-item"><a href="#">перфораторы</a></li>
         </ul>
     </div>
         <section>
@@ -86,58 +94,82 @@
                 <p class="filter-title">Фильтр:</p>
             </div>
                 <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-                    <fieldset class="price-fieldset">
+                    <fieldset class="filter-fieldset price-fieldset">
                         <legend>Цена:</legend>
+                        <div class="range-controls">
+            <div class="scale">
+              <div class="bar"></div>
+            </div>
+            <div class="toggle toggle-min"></div>
+            <div class="toggle toggle-max"></div>
+          </div>
                         <div class="range-slider">
-                            <input type="number" value="0" name="min">
-                            <span>—</span>
-                            <input type="number" value="30000" name="max">
-                            <div class="range-slider-track">
-                                <div class="range-slider-pin range-slider-pin-min"></div>
-                                <div class="range-slider-pin range-slider-pin-max"></div>
-                            </div>
+                            <input class="value-min" type="number" value="0" name="min">
+                            <span>&#8212;</span>
+                            <input class="value-max" type="number" value="30000" name="max">
                         </div>
                     </fieldset>
-                    <fieldset class="manufacturers-fieldset">
+                    <fieldset class="filter-fieldset manufacturers-fieldset">
                         <legend>Производители:</legend>
                         <ul class="filter-list">
                             <li class="filter-option">
-                                <input class="filter-input filter-input-checkbox" type="checkbox" name="bosch"
+                                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="bosch"
                                     id="filter-bosch" checked>
                                 <label for="filter-bosch">Bosch</label>
+                                <svg class="checkbox-hover-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                                    <path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
+                                    <path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                                </svg>
+
                             </li>
                             <li class="filter-option">
-                                <input class="filter-input filter-input-checkbox" type="checkbox" name="interskol"
+                                <input class=" visually-hidden filter-input filter-input-checkbox" type="checkbox" name="interskol"
                                     id="filter-interskol">
                                 <label for="filter-interskol">Интерскол</label>
+                                <svg class="checkbox-hover-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                                    <path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
+                                    <path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                                </svg>
                             </li>
                             <li class="filter-option">
-                                <input class="filter-input filter-input-checkbox" type="checkbox" name="makita"
+                                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="makita"
                                     id="filter-makita" checked>
                                 <label for="filter-makita">Makita</label>
+                                <svg class="checkbox-hover-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                                    <path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
+                                    <path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                                </svg>
                             </li>
                             <li class="filter-option">
-                                <input class="filter-input filter-input-checkbox" type="checkbox" name="dewalt"
+                                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="dewalt"
                                     id="filter-dewalt">
                                 <label for="filter-dewalt">Dewalt</label>
+                                <svg class="checkbox-hover-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                                    <path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
+                                    <path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                                </svg>
                             </li>
                             <li class="filter-option">
-                                <input class="filter-input filter-input-checkbox" type="checkbox" name="hitachi"
+                                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hitachi"
                                     id="filter-hitachi">
                                 <label for="filter-hitachi">Hitachi</label>
+                                <svg class="checkbox-hover-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                                    <path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/>
+                                    <path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                                </svg>
                             </li>
                         </ul>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="filter-fieldset type-of-power-fieldset">
                         <legend>Питание:</legend>
                         <ul class="filter-list">
                             <li class="filter-option">
-                                <input class="filter-input filter-input-radio" type="radio" name="product-group"
+                                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
                                     value="accumulator" id="filter-accumulator" checked>
                                 <label for="filter-accumulator">Аккумуляторные</label>
                             </li>
                             <li class="filter-option">
-                                <input class="filter-input filter-input-radio" type="radio" name="product-group"
+                                <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group"
                                     value="network" id="filter-network">
                                 <label for="filter-network">Сетевые</label>
                             </li>
@@ -152,13 +184,15 @@
                 <div class="sort-row">
                     <p>Сортировка:</p>
                     <ul class="sort-row-list">
-                        <li><a href="#">По цене</a></li>
-                        <li><a href="#">По типу</a></li>
-                        <li><a href="#">По функционалу</a></li>
-                        <li><a href="#" aria-label="Сортировка по возрастанию"></a></li>
-                        <li><a href="#" aria-label="Сортировка по убыванию"></a></li>
+                        <li><a class="sort-row-item" href="#">По цене</a></li>
+                        <li><a class="sort-row-item" href="#">По типу</a></li>
+                        <li><a class="sort-row-item" href="#">По функционалу</a></li>
                     </ul>
-                </div>
+                    <div class="sort-row-triangles-wrapper">
+                        <a class="sort-triangle sort-up-triangle" href="#" aria-label="Сортировка по возрастанию"></a>
+                        <a class="sort-triangle sort-down-triangle" href="#" aria-label="Сортировка по убыванию"></a>
+                    </div>
+                    </div>
                 <div class="products-container catalog-products-container">
                     <ul class="catalog-list catalog-page-list">
                         <li class="catalog-item catalog-page-item">
@@ -315,10 +349,9 @@
             <h2 class="visually-hidden">Информация о перфораторах</h2>
             <p class="caption">Пара слов о перфораторах</p>
             <p class="service-desc">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и
-                долбления отверстий в
-                кирпиче, бетоне и камне.
+                долбления отверстий в кирпиче, бетоне и камне.<br>
                 Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
-                дрели, шуруповерта и отбойного молотка.
+                дрели, шуруповерта и отбойного молотка.<br>
                 В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
                 ударная дрель.</p>
             </div>
@@ -341,7 +374,7 @@
           </div>
           <div class="footer-wrap footer-second-line-wrapper">
             <div class="footer-contacts-aside">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </div>
             <ul class="footer-list footer-service-list">
@@ -358,16 +391,16 @@
             <div class="footer-aside-container">
           <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
           <ul class="footer-list footer-social-list">
-            <li class="social-item"><a href="#" aria-label="Вконтакте"></a></li>
-            <li class="social-item"><a href="#" aria-label="Фейсбук"></a></li>
-            <li class="social-item"><a href="#" aria-label="Инстаграм"></a></li>
+            <li class="social-item icon-vk"><a href="#" aria-label="Вконтакте"></a></li>
+            <li class="social-item icon-fb"><a href="#" aria-label="Фейсбук"></a></li>
+            <li class="social-item icon-insta"><a href="#" aria-label="Инстаграм"></a></li>
           </ul>
           <div class="footer-contacts">
-            <div class="footer-contacts-container">
+            <div class="footer-contacts-container footer-contacts-email">
             <p>Обратная связь:<br>
               <a href="#">mail@htmlacademy.ru</a></p>
             </div>
-            <div class="footer-contacts-container">
+            <div class="footer-contacts-container footer-contacts-developers">
             <p>Разработано —<br>
              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
             </div>
@@ -376,14 +409,14 @@
       </div>
         </div>
       </footer>
-    <div class="modal modal-cart-success">
+    <div class="modal-window modal-cart-success">
+        <div class="cart-success-wrapper">
         <p>Товар добавлен в корзину!</p>
         <div class="modal-cart-buttons">
             <a class="main-buttons" href="">Оформить заказ</a>
             <button class="main-buttons continue-button" type="button">Продолжить покупки</button>
         </div>
-        <button type="button" aria-label="закрыть окно">
-        </button>
+    </div>
     </div>
 </body>
 
