--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
             <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
           </a>
           <div class="user-wrapper">
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-        <input type="search" id="search-field" name="search" placeholder="Поиск:">
+            <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+              <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+        <input class="search" type="search" id="search-field" name="search-field" placeholder="Поиск:">
+        <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+          <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+        </svg>
       </form>
-      <a class="link flag-link" href="#">Закладки:0</a>
-      <a class="link cart-link" href="#">Корзина:0</a>
+      <a class="link flag-link" href="#">Закладки: 0</a>
+      <a class="link cart-link" href="#">Корзина: 0</a>
       <a class="link order-link" href="#">Оформить заказ</a>
     </div>
    </div>
@@ -33,12 +36,14 @@
     <div class="header-info">
       <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
       <div class="header-contacts">
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
-      <div class="user-navigation">
-        <a class="account-link" href="">Войти</a>
-        <a class="account-link" href="">Регистрация</a>
+      <div class="user-navigation user-index-navigation">
+        <a class="account-link account-link-login" href="">
+          <svg class="icon-login" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+          Войти</a>
+        <a class="account-link account-link-registration" href="">Регистрация</a>
       </div>
     </div>
     <nav class="site-navigation">
@@ -61,53 +66,63 @@
       <h2 class="visually-hidden">Виды товара</h2>
       <div class="first-service-column">
         <div class="type-of-service materials">
-          <span class="service-caption">Материалы</span>
-          <a class="service-link" href="#">На любой вкус </a>
+          <div class="flag flag-new">новинка</div>
+          <ul class="type-of-service-list">
+          <li><span class="service-caption">Материалы</span></li>
+          <li><a class="service-link" href="#">На любой вкус </a></li>
+        </ul>
           <img src="img/icons/icon-materials.svg" width="44" height="65" alt="Материалы">
         </div>
         <div class="type-of-service tools">
-          <span class="service-caption">Инструмент</span>
-          <a class="service-link" href="#">На все случаи </a>
+          <ul class="type-of-service-list">
+          <li><span class="service-caption">Инструмент</span></li>
+          <li><a class="service-link" href="#">На все случаи </a></li>
+        </ul>
           <img src="img/icons/icon-tools.svg" width="75" height="61" alt="Инструмент">
         </div>
+        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
         <div class="slider">
+          <div class="slider-controls">
+            <label for="product-1">Первый</label>
+            <label for="product-2">Второй</label>
+          </div>
           <ul class="slider-list">
-            <li class="slider-item slide-1">
+            <li class="slider-item slide-1" id="slide1">
               <span class="slider-title">Перфораторы</span>
               <p class="slider-slogan">Настоящие мужские игрушки</p>
+              <a class="main-buttons" href="catalog.html">Открыть каталог</a>
             </li>
-            <li class="slider-item slide-2">
+            <li class="slider-item slide-2" id="slide2">
               <span class="slider-title">Дрели</span>
               <p class="slider-slogan">Соседям на радость!</p>
+              <a class="main-buttons" href="catalog.html">Открыть каталог</a>
             </li>
           </ul>
-          <div class="visually-hidden">
-          <a class="main-buttons" href="catalog.html">Открыть каталог</a>
-          <div class="slider-arrows">
-            <button type="button" aria-label="стрелка назад"></button>
-            <button type="button" aria-label="стрелка вперед"></button>
-          </div>
-          <form method="get" action="https://echo.htmlacademy.ru">
-            <input type="radio" name="slide-switch-1" aria-label="переключатель слайда">
-            <input type="radio" name="slide-switch-2" aria-label="переключатель слайда" checked>
-          </form>
-        </div>
+          <img class="arrow-left" src="img/icons/icon-left.svg" width="22" height="40" alt="Стрелка назад">
+          <img class="arrow-right" src="img/icons/icon-right.svg" width="22" height="40" alt="Стрелка вперд">
       </div>
       </div>
       <div class="second-service-column">
         <div class="type-of-service technic">
-          <span class="service-caption">Техника</span>
-          <a class="service-link" href="#">Для стройки</a>
+          <ul class="type-of-service-list">
+         <li><span class="service-caption">Техника</span></li>
+          <li><a class="service-link" href="#">Для стройки</a></li>
+        </ul>
           <img src="img/icons/icon-technic.svg" width="78" height="62" alt="Техника для стройки">
         </div>
         <div class="type-of-service sale">
-          <span class="service-caption">Скидки 50%</span>
-          <a class="service-link" href="#">На 350 товаров</a>
+          <ul class="type-of-service-list">
+          <li><span class="service-caption">Скидки 50%</span></li>
+          <li><a class="service-link" href="#">На 350 товаров</a></li>
+        </ul>
           <img src="img/icons/icon-sale.svg" width="59" height="72" alt="Распродажа">
         </div>
         <div class="type-of-service delivery">
-          <span class="service-caption">Доставка</span>
-          <a class="service-link" href="#">Бесплатно</a>
+          <ul class="type-of-service-list">
+         <li><span class="service-caption">Доставка</span></li>
+          <li><a class="service-link" href="#">Бесплатно</a></li>
+        </ul>
           <img src="img/icons/icon-delivery.svg" width="78" height="63" alt="Доставка">
         </div>
       </div>
@@ -153,6 +168,7 @@
             <p class="price price-label">15500 Р.</p>
           </li>
           <li class="catalog-item index-page-item">
+
             <div class="action-item">
               <a class="action-item-card buy-button" href="">купить</a>
               <a class="action-item-card bookmark-button" href="">в закладки</a>
@@ -262,31 +278,31 @@
         </li>
       </ul>
       <div class="info-service info-delivery">
-        <span class="service-item-title">Доставка</span>
+        <p class="service-item-title">Доставка</p>
         <p class="service-desc">Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно
           бесплатно!<br>Ведь мы
           неплохо
           заработаем,<br>поднимая его на ваш этаж!</p>
       </div>
       <div class="info-service info-guarantees">
-        <span class="service-item-title">Гарантия</span>
+        <p class="service-item-title">Гарантия</p>
         <p class="service-desc">Если купленный у нас товар поломается или заискрит,<br>
-          а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии. Мы
-          обменяем сгоревший товар на новый.<br>
+          а также в случае пожара, спровоцированного его возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы
+          обменяем<br>сгоревший товар на новый.<br>
           Дом уж восстановите как-нибудь сами.</p>
       </div>
       <div class="info-service info-credit">
-        <span class="service-item-title">Кредит</span>
+        <p class="service-item-title">Кредит</p>
         <p class="service-desc">Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.</p>
-        <a class="credit-button" href="#">Отправить заявку</a>
+        <a class="main-buttons" href="#">Отправить заявку</a>
       </div>
     </div>
     </div>
     </section>
     <div class="container">
     <div class="info-aside-container">
-      <section class="advantages">
+      <section class="aside-column advantages">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="caption">Компания «Техномарт»</p>
         <p class="service-desc">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
@@ -304,12 +320,12 @@
         </ul>
         <a class="main-buttons" href="#">подробнее о компании</a>
       </section>
-      <section class="contact-info">
+      <section class="aside-column contact-info">
         <h2 class="visually-hidden">Контактная информация</h2>
         <p class="caption">Контакты</p>
         <p class="service-desc">Вы можете забрать товар сами,<br>заехав в наш офис:</p>
         <a href="#">
-          <img src="img/map-small.png" width="300" height="158"
+          <img  class="small-map" src="img/map-small.png" width="300" height="158"
             alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
         </a>
         <a class="main-buttons" href="#">Заблудились? Напишите нам!</a>
@@ -334,7 +350,7 @@
       </div>
       <div class="footer-wrap footer-second-line-wrapper">
         <div class="footer-contacts-aside">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         </div>
         <ul class="footer-list footer-service-list">
@@ -351,16 +367,16 @@
         <div class="footer-aside-container">
       <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul class="footer-list footer-social-list">
-        <li class="social-item"><a href="#" aria-label="Вконтакте"></a></li>
-        <li class="social-item"><a href="#" aria-label="Фейсбук"></a></li>
-        <li class="social-item"><a href="#" aria-label="Инстаграм"></a></li>
+        <li class="social-item icon-vk"><a href="#" aria-label="Вконтакте"></a></li>
+        <li class="social-item icon-fb"><a href="#" aria-label="Фейсбук"></a></li>
+        <li class="social-item icon-insta"><a href="#" aria-label="Инстаграм"></a></li>
       </ul>
       <div class="footer-contacts">
-        <div class="footer-contacts-container">
+        <div class="footer-contacts-container footer-contacts-email">
         <p>Обратная связь:<br>
           <a href="#">mail@htmlacademy.ru</a></p>
         </div>
-        <div class="footer-contacts-container">
+        <div class="footer-contacts-container footer-contacts-developers">
         <p>Разработано —<br>
          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
@@ -369,38 +385,37 @@
   </div>
     </div>
   </footer>
-  <div class="modal modal-write-us-window">
-    <form method="post" action="https://echo.htmlacademy.ru">
-      <p>
+  <div class="modal-window modal-write-us-window">
+    <form class="write-us-form" method="post" action="https://echo.htmlacademy.ru">
+      <div class="modal-write-us-wrapper">
+      <p class="write-us-item">
         <label for="name-field">Ваше имя:</label>
         <input class="write-us-input" type="text" id="name-field" placeholder="Имя Фамилия" required>
       </p>
-      <p>
+      <p class="write-us-item">
         <label for="email-field">Ваш e-mail:</label>
         <input class="write-us-input" id="email-field" type="email" name="email" placeholder="email@example.com"
           required>
       </p>
-      <p>
+      <div class="write-us-item textarea-item">
         <label for="textarea">Текст письма:</label>
-        <textarea class="write-us-input" id="textarea" placeholder="В свободной форме" required></textarea>
-      </p>
-      <p class="modal-buttons">
+        <textarea class="write-us-input write-us-input-textarea" id="textarea" placeholder="В свободной форме" required></textarea>
+      </div>
+    </div>
+      <div class="modal-button-container">
         <button class="main-buttons" type="submit">
           Отправить
         </button>
-      </p>
-      <button type="button" aria-label="закрыть окно"></button>
+      </div>
     </form>
   </div>
-  <div class=" modal modal-map-window">
+  <div class="modal-window modal-map-window">
     <h2 class="visually-hidden">
       Как до нас добраться
     </h2>
-    <p>
       <img src="img/map-big.png" width="940" height="446"
         alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-    </p>
-    <button type="button" aria-label="закрыть окно"></button>
+
   </div>
 </body>
 
